@@ -1,6 +1,7 @@
 ART 4.11
 * Added showColumnFilters option for htmlDataTable report format
 * Restrict art classes in groovy source
+* Consider default report format when running a report
 
 ART 4.10
 * Allow use of grouping in jxls templates
